--- a/lib/src/login_component/login_component.html
+++ b/lib/src/login_component/login_component.html
@@ -32,6 +32,22 @@
 <!--        </div>-->
 <!--    </div>-->
 <!--</div>-->
+<div id="alert" *ngIf="showAlert"
+     [class.alert-danger]="statusCode!=200"
+     [class.alert-success]="statusCode==200"
+>
+    <div class="row" *ngIf="statusCode!=200">
+        <div class="col-2 my-auto">
+            <span class="fa fa-tice fa-2x text-danger"></span>
+        </div>
+        <div class="col-8 my-auto">
+            <span class="text-center">Login failed</span>
+        </div>
+        <div class="col-2 my-auto">
+            <span class="fa fa-times cursor-pointer" (click)="dismissAlert()"></span>
+        </div>
+    </div>
+</div>
 <div class="m-0">
     <div  style="width: 100vw; height: 100vh">
         <div class="arrow arrow--top">
