--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -73,13 +73,14 @@
                             </div>
                         </li>
                     </ul>-->
-                    <material-icon icon="settings_power" class="mt-1"></material-icon>
-
+                    <material-icon id="power-button" icon="power_settings_new" class="mt-1 p-1 cursor-pointer br-5" [class.login]="isLoggedIn" (click)="showDialog()"></material-icon>
+                    <span class="log-text" *ngIf="isLoggedIn">logged in</span>
+                    <span class="log-text" *ngIf="!isLoggedIn">logged out</span>
                 </nav>
             </div>
         </header>
         <!--/Material Nav bar-->
-        <div class="container-fluid">
+        <div class="container-fluid" id="html-body">
             <router-outlet [routes]="InnerRoutes.all"></router-outlet>
 
             <div class="position-fixed" id="floating-nav">
@@ -93,4 +94,17 @@
         </div>
     </material-content>
     <!--/Page Content-->
+</div>
+
+<div class="dialog-box card border-0 shadow-c br-20" id="log-dialog" display="false">
+    <div class="card-header bg-danger text-center border-0 br-20 text-white">
+        Logout <span class="fa fa-sign-out-alt mx-1"></span>
+    </div>
+    <div class="card-body border-0">
+        Are you sure you want to logout?
+        <div class="mt-2 mb-3 float-right">
+            <button class="btn btn-sm btn-success px-4 br-20" (click)="doLogout()">Yes</button>
+            <button class="btn btn-sm btn-primary px-4 br-20" (click)="dismissDialog()">No</button>
+        </div>
+    </div>
 </div>
