--- a/lib/src/login_component/login_component.html
+++ b/lib/src/login_component/login_component.html
@@ -38,13 +38,13 @@
 >
     <div class="row" *ngIf="statusCode!=200">
         <div class="col-2 my-auto">
-            <span class="fa fa-tice fa-2x text-danger"></span>
+            <span class="fa fa-tice fa-2x text-danger ml-2"></span>
         </div>
         <div class="col-8 my-auto">
-            <span class="text-center">Login failed</span>
+            <span class="text-center">{{message}}</span>
         </div>
         <div class="col-2 my-auto">
-            <span class="fa fa-times cursor-pointer" (click)="dismissAlert()"></span>
+            <span class="fa fa-times cursor-pointer mr-2" (click)="dismissAlert()"></span>
         </div>
     </div>
 </div>
