--- a/lib/src/signup_component/signup_component.html
+++ b/lib/src/signup_component/signup_component.html
@@ -4,13 +4,13 @@
 >
     <div class="row" *ngIf="statusCode!=200">
         <div class="col-2 my-auto">
-            <span class="fa fa-tice fa-2x text-danger"></span>
+            <span class="fa fa-tice fa-2x text-danger ml-2 my-auto"></span>
         </div>
         <div class="col-8 my-auto">
-            <span class="text-center">Signup failed</span>
+            <span class="text-center">{{message}}</span>
         </div>
         <div class="col-2 my-auto">
-            <span class="fa fa-times cursor-pointer" (click)="dismissAlert()"></span>
+            <span class="fa fa-times cursor-pointer mr-2 my-auto" (click)="dismissAlert()"></span>
         </div>
     </div>
 </div>
