implementing facebook login

--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -129,6 +129,7 @@
                 <!--<div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
                 <!--<button class="btn btn-primary btn-sm btn-block btn-outline-primary br-20">login in with facebook</button>-->
                 <a [href]="loginLinkUrl" class="btn btn-outline-primary btn-block br-20">Login with facebook</a>
+                <!-- <button (click)="gotoFacebook()" class="btn btn-outline-primary btn-block br-20">Login with facebook</button> -->
             </div>
             <div class="form-group">
                 <span class="float-right my-3">
