--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
+    <!-- <script>
       // WARNING: DO NOT set the <base href> like this in production!
       // Details: https://webdev.dartlang.org/angular/guide/router
       (function () {
         var m = document.location.pathname.match(/^(\/[-\w]+)+\/web($|\/)/);
         document.write('<base href="' + (m ? m[0] : '/') + '" />');
       }());
-    </script>
+    </script> -->
+    <base href="/">
     <title>PostitUI</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
