--- a/lib/src/dashboard_component/create_post_component/csv_upload_component/csv_upload_component.html
+++ b/lib/src/dashboard_component/create_post_component/csv_upload_component/csv_upload_component.html
@@ -1,10 +1,10 @@
 <div class="col-lg-12 col-md-12">
     <div class="row bg-transparent br-20">
-        <div class="col-8 mx-auto">
+        <div class="col-8">
             <input type="text" class="nt-form-control br-20" [placeholder]="csvFileName">
             <input type="file" class="br" id="input_file" (change)="handleFileUpload($event)" accept="text/csv">
         </div>
-        <div class="col-4 mx-auto" style="margin-top: 3px">
+        <div class="col-4 p-0" style="margin-top: 3px">
             <button class="btn btn-primary px-4 br-20" (click)="doUpload()">Upload</button>
         </div>
         <div class="col-8" *ngIf="progressStatus">
