Table respnsiveness added

--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -397,7 +397,7 @@
                         </div>
 
                         <div *ngIf="currentPosts.isEmpty">
-                            <div class="nt-center text-muted">
+                            <div class="nt-center text-muted" style="width: max-content;">
                                 <span class="fa fa-cloud text-muted mr-1"></span>
                                 Nothing created yet
                             </div>
