Cleaned code and fixed some minor issues

--- a/lib/src/dashboard_component/setting_component/user_account_component/user_account_component.html
+++ b/lib/src/dashboard_component/setting_component/user_account_component/user_account_component.html
@@ -1,5 +1,5 @@
 <div class="row mt-3">
-    <div class="col-lg-6 col-md-10">
+    <div class="col-lg-6 col-md-6 col-sm-12 mb-3" style="margin-left: 15px">
         <div class="card shadow-c border-0 bg-transparent box-one br-20 mb-3">
             <div class="card-header py-3 bg-transparent box-one br-20 border-0">
                 <p class="text-muted m-0 font-nyata">User Settings</p>
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-6 col-md-10">
+    <div class="col-lg-6 col-md-6 col-sm-12 mb-3" style="margin-left: 15px">
         <div class="card shadow-c border-0 bg-transparent box-one br-20">
             <div class="card-header py-3 br-20 bg-transparent box-one border-0">
                 <p class="text-muted font-nyata m-0">Contact Settings</p>
@@ -49,14 +49,14 @@
                     <div class="form-row">
                         <div class="col">
                             <div class="form-group">
-                                <label for="city"><strong>City</strong></label>
-                                <input class="nt-form-control br-20 border-0" type="text" placeholder="Accra" name="city" id="city">
+                                <label for="phone"><strong>Phone</strong></label>
+                                <input class="nt-form-control br-20 border-0" type="text" placeholder="Accra" name="phone" id="phone">
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-group">
-                                <label for="country"><strong>Country</strong></label>
-                                <input class="nt-form-control br-20 border-0" type="text" placeholder="Ghana" name="country" id="country">
+                                <label for="gp_address"><strong>GP Address</strong></label>
+                                <input class="nt-form-control br-20 border-0" type="text" placeholder="ghana_post_address" name="gp_address" id="gp_address">
                             </div>
                         </div>
                     </div>
